--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-	<title>MyReads: An aweosme Book shelf</title>
+	<title>MyReads: An awesome Book shelf</title>
 </head>
 
 <body>
